terraform/terragrunt/local/kind-argocd/apps/azure-auth-sim/base/policies/cilium/cilium-network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: azure-auth-gateway-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: azure-auth-gateway-nginx
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toServices:
        - k8sService:
            namespace: nginx-gateway
            serviceName: nginx-gateway
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "8443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: nginx-gateway
            app.kubernetes.io/instance: nginx-gateway
            "k8s:io.kubernetes.pod.namespace": nginx-gateway
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: oauth2-proxy-frontend
            app.kubernetes.io/component: auth-proxy
      toPorts:
        - ports:
            - port: "4180"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: keycloak
            app.kubernetes.io/component: identity
            "k8s:io.kubernetes.pod.namespace": azure-entraid-sim
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: apim-simulator
            app.kubernetes.io/component: gateway
            "k8s:io.kubernetes.pod.namespace": azure-apim-sim
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: apim-simulator-uat
            app.kubernetes.io/component: gateway
            "k8s:io.kubernetes.pod.namespace": azure-apim-sim
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: azure-auth-oauth2-proxy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy-frontend
      app.kubernetes.io/component: auth-proxy
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: azure-auth-gateway-nginx
      toPorts:
        - ports:
            - port: "4180"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: frontend-react-keycloak-protected
            app.kubernetes.io/component: frontend
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: keycloak
            app.kubernetes.io/component: identity
            "k8s:io.kubernetes.pod.namespace": azure-entraid-sim
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: azure-auth-frontend
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: frontend-react-keycloak-protected
      app.kubernetes.io/component: frontend
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: oauth2-proxy-frontend
            app.kubernetes.io/component: auth-proxy
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: azure-auth-api
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: api-fastapi-keycloak
      app.kubernetes.io/component: backend
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: apim-simulator
            app.kubernetes.io/component: gateway
            "k8s:io.kubernetes.pod.namespace": azure-apim-sim
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: apim-simulator-uat
            app.kubernetes.io/component: gateway
            "k8s:io.kubernetes.pod.namespace": azure-apim-sim
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: keycloak
            app.kubernetes.io/component: identity
            "k8s:io.kubernetes.pod.namespace": azure-entraid-sim
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toFQDNs:
        - matchName: www.cloudflare.com
        - matchName: cloudflare.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
